--- a/web/src/styles/components/Navbar.scss
+++ b/web/src/styles/components/Navbar.scss
@@ -1,80 +1,57 @@
 .navbar {
     position: fixed;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     width: 100%;
-    padding: 10px 150px;
-    border-width: 1px;
-    border-style: solid;
-    border-image: linear-gradient(
-            90deg,
-            var(--transparent-color) 0%,
-            var(--white) 50%,
-            var(--transparent-color) 100%
-        )
-        0 0 1 0;
+    padding: 10px 100px;
+    font-size: 18px;
     background-color: var(--background-color) 7d;
     gap: 100px;
     box-sizing: border-box;
     z-index: 19;
     -webkit-backdrop-filter: blur(50px);
     backdrop-filter: blur(50px);
+    border: none;
     overflow-x: hidden;
     transition: 0.3s;
 
-    & .logo {
+    .logo {
+        width: calc(100% / 3);
         display: flex;
+        align-items: center;
+        justify-content: flex-start;
         gap: 10px;
         align-items: center;
 
         & img {
             max-width: 82px;
             max-height: 82px;
+            cursor: pointer;
         }
     }
 }
 
-.navbar-first-part {
-    display: flex;
-    gap: 100px;
-    align-items: center;
-}
-
 .navbar-buttons {
+    width: calc(100% / 3);
     display: flex;
-    gap: 20px;
     align-items: center;
+    justify-content: space-between;
     text-align: center;
-}
 
-.navbar-buttons-last {
-    display: flex;
-    gap: 20px;
-    align-items: center;
-    text-align: center;
+    p {
+        cursor: pointer;
+    }
 }
 
 .navbar-buttons-additional {
+    width: calc(100% / 3);
     display: flex;
+    align-items: center;
+    justify-content: flex-end;
     gap: 20px;
     align-items: center;
     text-align: center;
-}
-
-.change-theme-button {
-    width: 40px;
-    height: 40px;
-    border: none;
-    background: transparent;
-    cursor: pointer;
-
-    & svg {
-        width: 100%;
-        height: 100%;
-        color: var(--white);
-        transition: 0.3s;
-    }
 }
 
 .navbar-mobile {
@@ -227,11 +204,6 @@
 
     #navbar .small-text {
         font-size: 20px;
-    }
-
-    .change-theme-button {
-        width: 35px;
-        height: 35px;
     }
 }
 
