--- a/web/src/styles/components/pages/main/FAQS.scss
+++ b/web/src/styles/components/pages/main/FAQS.scss
@@ -1,7 +1,9 @@
 .questions {
     &-container {
         width: 100%;
+        max-width: var(--block-max-width);
         display: flex;
+        align-items: center;
         flex-direction: column;
         padding-top: 125px;
         padding-bottom: 125px;
@@ -9,6 +11,7 @@
     }
 
     &-header {
+        position: relative;
         width: 100%;
         display: flex;
         justify-content: center;
@@ -18,10 +21,27 @@
         & p {
             margin: 0;
         }
+
+        .particle {
+            position: absolute;
+            top: -50px;
+            left: -200px;
+            width: 100%;
+            max-width: 425px;
+            max-height: 425px;
+            aspect-ratio: 1/1;
+            transform: rotate(-155deg);
+
+            img {
+                width: 100%;
+                height: 100%;
+            }
+        }
     }
 
     &-block {
         width: 100%;
+        max-width: 1000px;
         display: flex;
         flex-direction: column;
         align-items: center;
