--- a/web/src/styles/components/pages/main/UserOfferBlock.scss
+++ b/web/src/styles/components/pages/main/UserOfferBlock.scss
@@ -1,20 +1,41 @@
 .user-offer {
     &-block {
+        position: relative;
         width: 100%;
+        max-width: 1000px;
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        border-radius: 44px;
         gap: 50px;
-    }
+        padding: 100px 50px;
+        overflow: hidden;
+        background: linear-gradient(89.07deg, #0f1f46 17.26%, #341f39 86.7%);
+        box-sizing: border-box;
 
-    &-header {
-        width: 50%;
-        margin: 0;
-        display: flex;
-        flex-direction: column;
+        .circle {
+            position: absolute;
+            opacity: 0.1;
+            background: transparent;
+            border: 40px solid var(--white);
+            border-radius: 50%;
+            width: 130px;
+            height: 130px;
 
-        & p {
+            &:nth-child(3) {
+                bottom: -50px;
+                left: -50px;
+            }
+
+            &:nth-child(4) {
+                top: 50px;
+                right: -100px;
+            }
+        }
+
+        p {
+            font-weight: 600;
             margin: 0;
             text-align: center;
         }
