--- a/web/src/styles/components/pages/main/WhatIsBlock.scss
+++ b/web/src/styles/components/pages/main/WhatIsBlock.scss
@@ -1,20 +1,77 @@
 .what-is {
-    width: 50%;
+    position: relative;
+    width: 100%;
     display: flex;
     align-items: center;
     flex-direction: column;
     text-align: center;
     gap: 20px;
 
-    &-buttons {
+    &-text {
+        width: 50%;
+    }
+
+    &-actions {
+        width: 100%;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        gap: 50px;
+    }
+
+    &-input {
+        position: relative;
+        width: 100%;
+        max-width: 600px;
+        height: 80px;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        gap: 50px;
+        background: #242228;
+        border-radius: 33px;
+        padding: 8px 12px;
+        box-sizing: border-box;
+
+        input {
+            background: transparent;
+            border: none;
+            height: 100%;
+            width: max-content;
+            outline: none;
+            font-size: 18px;
+        }
     }
 
     & p {
         margin: 0;
+    }
+
+    .particle {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        transform: translate(0, -50%);
+        aspect-ratio: 1/1;
+
+        &:nth-child(3) {
+            max-width: 342px;
+            max-height: 342px;
+            top: 35%;
+            right: -100px;
+        }
+
+        &:nth-child(4) {
+            max-width: 187px;
+            max-height: 187px;
+            top: 65%;
+            left: -20px;
+            transform: rotate(75deg);
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+        }
     }
 }
 
