--- a/web/src/styles/components/pages/main/OurCompany.scss
+++ b/web/src/styles/components/pages/main/OurCompany.scss
@@ -6,10 +6,12 @@
 .our-company {
     position: relative;
     width: 100%;
-    height: 728px;
+    height: 100%;
+    max-height: 728px;
     max-width: 100%;
     display: flex;
     justify-content: center;
+    aspect-ratio: 1.5/1;
 
     p {
         font-family: "Dirtyline";
@@ -18,7 +20,7 @@
         font-weight: 400;
         line-height: 203.47px;
         text-align: left;
-        background-image: linear-gradient(0deg, #000, #fff);
+        background-image: linear-gradient(0deg, var(--black), var(--white));
         -webkit-background-clip: text;
         background-clip: text;
         -webkit-text-fill-color: transparent;
@@ -31,7 +33,8 @@
         width: 100%;
         height: 100%;
         background: url("../../../../assets/heart.png");
-        background-size: cover;
-        background-position-y: 3%;
+        background-size: 130%;
+        background-position-y: -10px;
+        background-position-x: center;
     }
 }
